overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -19,31 +19,34 @@ a {
 
 /* MAIN */
 
-aside,
-aside .top-sidebar,
-.container,
-.main-content .top-bar,
-.main-content .content-body .nav-bar,
-.main-content .content-body .nav-bar .nav-links,
-.main-content .content-body .nav-bar .nav-links ul,
-.main-content .content .section .cards,
-.main-content .section .cards .song-card {
-    display: flex;
-}
+/* aside, */
+/* aside .top-sidebar, */
+/* .container, */
+/* .main-content .top-bar, */
+/* .main-content .content-body .nav-bar, */
+/* .main-content .content-body .nav-bar .nav-links, */
+/* .main-content .content-body .nav-bar .nav-links ul, */
+/* .main-content .content .section .cards, */
+/* .main-content .section .cards .song-card { */
+    /* display: flex; */
+/* } */
 
 .container {
+    display: flex;
     height: calc(100vh - 90px);
 }
 
 /* SIDEBAR */
 aside {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-Y: hidden;
     /* color: #fff; */
     color: gray;
     background-color: black; 
     min-width: 230px;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 aside .brand-logo {
@@ -59,8 +62,12 @@ aside .nav-aside {
 }
 
 aside .top-sidebar {
+    height: calc(100% - 50px); /*50px altezza del box account*/
+    min-height: 290px;
+    display: flex;
     flex-direction: column;
     overflow-y: hidden;
+    padding: 20px;
 }
 
 aside .nav-aside > * {
@@ -88,7 +95,7 @@ aside .icon#library::before {
 
 
 aside .playlist {
-    overflow: auto;
+    overflow-Y: auto;
     /* color: gray; */
     font-weight: bold;
     font-size: 14px;
@@ -119,6 +126,11 @@ aside .playlist span {
 
 aside .account {
     /* justify-self: flex-end; */
+    height: 50px;
+    overflow-y: hidden;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 20px;
 }
 
 aside .account #install {
@@ -137,12 +149,14 @@ aside .account #install::before {
 .main-content {
     position: relative;
     flex-grow: 1;
+    overflow-Y: hidden;
     background-color: #141922; 
     color: #fff;
 }
 
 /* top-bar */
 .main-content .top-bar {
+    display: flex;
     position: absolute;
     top: 0;
     height: 90px;
@@ -176,26 +190,31 @@ aside .account #install::before {
 
 /* navbar */
 .main-content .content-body .nav-bar {
+    display: flex;
     justify-content: center;
     height: 60px;
 }
 
 /* links di navigazione */
 .main-content .content-body .nav-bar .nav-links {   
+    display: flex;
     width: 65%;
     align-items: center;
     justify-content: center;
 }
 
 .main-content .content-body .nav-bar .nav-links ul{
+    display: flex;
     width: 100%;
     justify-content: space-evenly;
     list-style: none;
     flex-wrap: wrap;
-    gap: 10px;
+    /* gap: 10px; */ /* See u soon my friend*/
 }
 
 .main-content .content-body .nav-bar .nav-links ul li {
+    margin-left: 5px;
+    margin-right: 5px;
     margin-top: 20px;
 }
 
@@ -223,17 +242,20 @@ aside .account #install::before {
 }
 
 .main-content .content .section .cards {
+    display: flex;
     margin-top: 1.5rem;
-    gap: 13px;
+    /* gap: 13px; */
 }
 
 /* song card */
 .main-content .section .cards .song-card {
+    display: flex;
     flex-direction: column;
     /* height: 280px; */
     /* flex-basis: 180px; */
     width: calc(100% / 6 - 13px);
-    /* margin-right: 13px; */  /* utilizzo la propr. GAP di flex */
+    margin-right: 13px;
+    margin-bottom: 13px;
     text-align: center;
     color: #fff;
 }
